# agents

./: .envrc  .gitignore  .gitleaks.toml  AGENTS.md  Brewfile  ONBOARDING.md  README.md  SECURITY_HARDENING.md  SPEC.md  bootstrap.sh  flake.nix  justfile  mcp.auth.json  mcp.json  mcp.local.json.example  mcp.manifest.json  provision.sh  skills.lock.json  teardown.sh
.github/: dependabot.yml
agents/: explorer.json  reviewer.json
assistant/: 1password-secrets.md  personal-actions-webhook.md  pipedream-personal-actions-validation.js  policy.md
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  pty.rs
hooks/: format-file.sh  guard-bash.sh  profile-broker.sh
jj/: config.toml
observability/: docker-compose.yml  otel-collector.yaml
profiles/: code-edit.json  personal-assistant.json  plan-readonly.json  prod-mutator-confirmed.json  prod-observer.json  repo-maintainer.json  vizcom-sre.json
scorecard/: refresh-prompt.md  refresh.sh
scripts/: agent_control.py  agents_secrets_op_import.py  mcp_auth.py  personal_actions_canary.py  personal_actions_check.py  personal_actions_google_compose_auth.py  windmill_bootstrap.py  windmill_link_personal_resources.py  windmill_oauth_configure.py
specs/: agent-control-plane.md  desktop-app.md  fleet-improvement-plan.md  mcp-oauth-bridge.md  personal-actions.md
systemd/: agentd.service  agentq-worker.service  agentq-worker.timer  agents-reconcile.service  agents-reconcile.timer  fleet-monitor.service  (+3 more)
(+65 files in other folders)
