[package]
name = "agents-desktop"
version = "0.1.0"
description = "Desktop control center for the agents environment"
authors = ["Kaelan Richards <kadokaelan@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agents_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
keyring = { version = "3", features = ["apple-native"] }
anyhow = "1"

[features]
default = []
